fix(shadows): replace path everywhere

--- a/buttons/primary-button/primary-button.mod.css
+++ b/buttons/primary-button/primary-button.mod.css
@@ -1,5 +1,5 @@
 @import '../../materials/colors/base-colors.mod.css';
-@import '../../materials/shadows.mod.css';
+@import '../../materials/shadows/base-shadows.mod.css';
 @import '../../materials/spacings.mod.css';
 @import '../../materials/transitions.mod.css';
 
