--- a/switches/toggle/toggle-button.mod.css
+++ b/switches/toggle/toggle-button.mod.css
@@ -1,7 +1,7 @@
 @import '../../materials/colors/base-colors.mod.css';
 @import '../../materials/sizes.mod.css';
 @import '../../materials/transitions.mod.css';
-@import '../../materials/shadows.mod.css';
+@import '../../materials/shadows/base-shadows.mod.css';
 
 :root {
   --big-button-height: var(--standard-input-height);
