--- a/tag/tag.mod.css
+++ b/tag/tag.mod.css
@@ -1,6 +1,6 @@
 @import '../materials/borders.mod.css';
 @import '../materials/colors/base-colors.mod.css';
-@import '../materials/shadows.mod.css';
+@import '../materials/shadows/base-shadows.mod.css';
 @import '../materials/spacings.mod.css';
 
 .wrapper {
