--- a/materials/tokens/borders.mod.css
+++ b/materials/tokens/borders.mod.css
@@ -13,6 +13,9 @@
     *  ◦ Text fields
     *   ▪ Border Colors
     *   ▪ Border Radius
+    * • Tags
+    *  ◦ Border Colors
+    *  ◦ Border Radius
     */
 
   /* ==========================================================================
@@ -32,4 +35,17 @@
 
   /* Radius */
   --token-border-radius-input: var(--border-radius-6);
+
+  /* ==========================================================================
+   Tags (used in Tags and SelectInput)
+   ========================================================================== */
+
+  /* Colors */
+  --token-border-color-tags-pristine: var(--color-gray-60);
+  --token-border-color-tags-warning: var(--color-orange);
+  --token-border-color-tags-focus: var(--color-green);
+  --token-border-color-tags-warning-hover: var(--color-orange);
+
+  /* Radius */
+  --token-border-radius-tags: var(--border-radius-2);
 }
