--- a/materials/tokens/tokens.mod.css
+++ b/materials/tokens/tokens.mod.css
@@ -1,4 +1,5 @@
 @import './backgrounds.mod.css';
 @import './borders.mod.css';
 @import './fonts.mod.css';
+@import './shadows.mod.css';
 @import './sizes.mod.css';
