refactor(select-input): applies tokens to multivalue

--- a/materials/tokens/fonts.mod.css
+++ b/materials/tokens/fonts.mod.css
@@ -35,4 +35,5 @@
    ========================================================================== */
 
   --token-font-size-default: 13px;
+  --token-font-size-small: 12px;
 }
