--- a/inputs/select-input/select-input.css
+++ b/inputs/select-input/select-input.css
@@ -100,6 +100,7 @@
 
 /* Selected */
 
+.react-select .react-select__option:active,
 .react-select .react-select__option--is-selected {
   color: var(--token-font-color-default);
   background-color: var(--token-background-color-input-selected);
@@ -136,4 +137,31 @@
 
 .react-select .react-select__placeholder {
   color: var(--token-font-color-placeholder);
+}
+
+/* isMulti (a.k.a Tags) */
+
+.react-select__multi-value {
+  background-color: var(--token-background-color-tags-pristine) !important;
+  padding: 0;
+}
+
+.react-select__multi-value__label {
+  font-size: var(--token-font-size-small) !important;
+  padding: var(--spacing-4) var(--spacing-8) !important;
+  border-radius: var(--token-border-radius-tags);
+  border: 1px var(--token-border-color-tags-pristine) solid;
+}
+
+.react-select__multi-value__remove {
+  border-color: var(--token-border-color-tags-pristine) !important;
+  padding: 0 var(--spacing-4);
+  border-radius: 0 var(--token-border-radius-tags) var(--token-border-radius-tags) 0 !important;
+  border-style: solid;
+  border-width: 1px 1px 1px 0;
+}
+
+.react-select__multi-value__remove:hover {
+  background-color: var(--token-background-color-tags-normal-hover) !important;
+  box-shadow: var(--token-shadow-box-tags-hover);
 }
