feat(ui-kit): add error messages to LocalizedMultilineTextInput

--- a/inputs/localized-multiline-text-input/localized-multiline-text-input.mod.css
+++ b/inputs/localized-multiline-text-input/localized-multiline-text-input.mod.css
@@ -115,11 +115,10 @@
   display: flex;
 }
 
-.commandsLanguages {
+.commandsLeft {
   flex: 1;
 }
 
 .commandsExpand {
   flex: 0;
-  align-self: flex-end;
 }
