feat(ui-kit): use LoadingSpinner of UI-Kit

--- a/inputs/select-input/select-input.css
+++ b/inputs/select-input/select-input.css
@@ -71,23 +71,24 @@
   background: none;
 }
 
+.react-select .react-select__indicators > * + * {
+  margin: 0;
+  padding: 0;
+  margin-left: var(--spacing-4);
+}
+
 .react-select .react-select__indicator-separator {
   display: none;
 }
 
-.react-select .react-select__indicator {
-  padding: 0;
-  margin: 0 var(--spacing-8) 0 0;
-}
-
 .react-select .react-select__dropdown-indicator {
   color: var(--token-font-color-default);
+  margin-right: var(--spacing-8);
 }
 
 /* Clear indicator  */
 .react-select .react-select__clear-indicator {
   display: flex;
-  margin: 0 var(--spacing-8) 0 0;
 }
 
 /* Menu */
