feat(ui-kit): avoid text overflow in select inputs

--- a/inputs/select-input/select-input.css
+++ b/inputs/select-input/select-input.css
@@ -24,6 +24,7 @@
 
 .react-select .react-select__value-container {
   background-color: none;
+  overflow: hidden;
 }
 
 .react-select .react-select__control {
