refactor(ui-kit): extract shared components of select-inputs

--- a/internals/select.css
+++ b/internals/select.css
@@ -1,12 +1,16 @@
 /*
-  ⚠️ These styles are used for SelectInput and AsyncCreatableSelectInput.
+  ⚠️ These styles are used for
+    - SelectInput
+    - AsyncSelectInput
+    - CreatableSelectInput
+    - AsyncCreatableSelectInput
 
   Always check all affected components when making changes here!
 */
-@import '../../materials/tokens/tokens.mod.css';
-@import '../../materials/transitions.mod.css';
-@import '../../materials/spacings.mod.css';
-@import '../../materials/shadows/base-shadows.mod.css';
+@import '../materials/tokens/tokens.mod.css';
+@import '../materials/transitions.mod.css';
+@import '../materials/spacings.mod.css';
+@import '../materials/shadows/base-shadows.mod.css';
 
 /*
   These styles use selector specificity to determine importance, otherwise
