--- a/src/materials/tokens/fonts.mod.css
+++ b/src/materials/tokens/fonts.mod.css
@@ -26,6 +26,7 @@
   --token-font-color-default: var(--color-black);
   --token-font-color-disabled: var(--color-gray-60);
   --token-font-color-error: var(--color-red);
+  --token-font-color-success: var(--color-green);
   --token-font-color-warning: var(--color-orange);
   --token-font-color-readonly: var(--color-gray-60);
   --token-font-color-placeholder: var(--color-gray-60);
