--- a/src/materials/tokens/sizes.mod.css
+++ b/src/materials/tokens/sizes.mod.css
@@ -11,6 +11,8 @@
     * • Inputs
     *  ◦ Text fields
     *   ▪ Height
+    * • Buttons
+    *  ◦ Height
     */
 
   /* ==========================================================================
@@ -22,4 +24,11 @@
 
   /* Height */
   --token-size-height-input: 32px;
+
+  /* ==========================================================================
+   Buttons
+   ========================================================================== */
+
+  /* Height */
+  --token-size-height-button: 32px;
 }
