--- a/src/materials/tokens/shadows.mod.css
+++ b/src/materials/tokens/shadows.mod.css
@@ -11,12 +11,93 @@
     * Index
     * • Tags
     *  ◦ Shadows Box
+    * • Buttons
+    *  ◦ Shadows Box
+    *  ◦ Primary Action
+    *   ▪ Shadows Box
+    *  ◦ Secondary Action
+    *   ▪ Shadows Box
+    *  ◦ Critical Action
+    *   ▪ Shadows Box
+    *  ◦ Icon
+    *   ▪ Shadows Box
+    *  ◦ Flat Primary Action
+    *   ▪ Shadows Box
+    *  ◦ Flat Secondary Action
+    *   ▪ Shadows Box
+    *  ◦ Flat Icon
+    *   ▪ Shadows Box
     */
 
   /* ==========================================================================
    Tags (used in Tags and SelectInput)
    ========================================================================== */
 
-  /* Colors */
+  /* Box */
   --token-shadow-box-tags-hover: var(--shadow-1-first), var(--shadow-1-second);
+
+  /* ==========================================================================
+   Buttons
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-disabled: var(--shadow-16-first);
+
+  /* Primary Action
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-primary-action-pristine: var(--shadow-7-first), var(--shadow-7-second);
+  --token-shadow-box-button-primary-action-hover: var(--shadow-8-first), var(--shadow-8-second);
+  --token-shadow-box-button-primary-action-active: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
+
+  /* Secondary Action
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-secondary-action-pristine: var(--shadow-7-first), var(--shadow-7-second);
+  --token-shadow-box-button-secondary-action-hover: var(--shadow-8-first), var(--shadow-8-second);
+  --token-shadow-box-button-secondary-action-active: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
+  --token-shadow-box-button-secondary-action-active-hover: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
+
+  /* Critical Action
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-critical-action-pristine: var(--shadow-7-first), var(--shadow-7-second);
+  --token-shadow-box-button-critical-action-hover: var(--shadow-8-first), var(--shadow-8-second);
+  --token-shadow-box-button-critical-action-active: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
+
+  /* Flat Primary Action
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-flat-primary-action-pristine: 'none';
+  --token-shadow-box-button-flat-primary-action-hover: 'none';
+  --token-shadow-box-button-flat-primary-action-active: 'none';
+
+  /* Flat Primary Action
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-flat-primary-action-pristine: 'none';
+  --token-shadow-box-button-flat-primary-action-hover: 'none';
+  --token-shadow-box-button-flat-primary-action-active: 'none';
+
+  /* Icon
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-icon-pristine: var(--shadow-7-first), var(--shadow-7-second);
+  --token-shadow-box-button-icon-hover: var(--shadow-8-first), var(--shadow-8-second);
+  --token-shadow-box-button-icon-active: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
+  --token-shadow-box-button-icon-active-hover: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
+
+  /* Flat Icon
+   ========================================================================== */
+
+  /* Box */
+  --token-shadow-box-button-flat-icon-pristine: 'none';
+  --token-shadow-box-button-flat-icon-hover: 'none';
+  --token-shadow-box-button-flat-icon-active: 'none';
 }
