--- a/src/components/switches/radio/radio-option.mod.css
+++ b/src/components/switches/radio/radio-option.mod.css
@@ -35,10 +35,12 @@
 
 /* Hover */
 
-.labelWrapper:not(.labelWrapperDisabled):hover svg
-  [id='borderAndContent'] > [id='border'] {
-    stroke: var(--token-border-color-input-focus);
-  }
+.labelWrapper:not(.labelWrapperDisabled):hover
+  svg
+  [id='borderAndContent']
+  > [id='border'] {
+  stroke: var(--token-border-color-input-focus);
+}
 
 /* Hidden input */
 
