--- a/materials/tokens/shadows.mod.css
+++ b/materials/tokens/shadows.mod.css
@@ -11,12 +11,31 @@
     * Index
     * • Tags
     *  ◦ Shadows Box
+    * • Buttons
+    *  ◦ Shadows Box
+    *  ◦ Primary Action
+    *   ▪ Shadows Box
     */
 
   /* ==========================================================================
    Tags (used in Tags and SelectInput)
    ========================================================================== */
 
-  /* Colors */
+  /* Box */
   --token-shadow-box-tags-hover: var(--shadow-1-first), var(--shadow-1-second);
+
+  /* ==========================================================================
+   Buttons
+   ========================================================================== */
+
+   /* Box */
+  --token-shadow-box-button-disabled: var(--shadow-16-first);
+
+   /* Primary Action
+   ========================================================================== */
+
+   /* Box */
+  --token-shadow-box-button-primary-action-pristine: var(--shadow-7-first), var(--shadow-7-second);
+  --token-shadow-box-button-primary-action-hover: var(--shadow-8-first), var(--shadow-8-second);
+  --token-shadow-box-button-primary-action-active: var(--shadow-9-first), var(--shadow-9-second), var(--shadow-9-third);
 }
