--- a/materials/tokens/sizes.mod.css
+++ b/materials/tokens/sizes.mod.css
@@ -11,6 +11,8 @@
     * • Inputs
     *  ◦ Text fields
     *   ▪ Height
+      * • Tag
+    *  ◦ Height
     */
 
   /* ==========================================================================
@@ -22,4 +24,11 @@
 
   /* Height */
   --token-size-height-input: 32px;
+
+  /* ==========================================================================
+   Tags
+   ========================================================================== */
+
+  /* Height */
+  --token-size-height-tags: 26px;
 }
