--- a/src/components/internals/select.css
+++ b/src/components/internals/select.css
@@ -155,7 +155,12 @@
 
 /* isMulti (a.k.a Tags) */
 
+.react-select .react-select__value-container--is-multi {
+  padding: 0 var(--spacing-8);
+}
+
 .react-select .react-select__multi-value {
+  height: var(--token-size-height-tags);
   background-color: var(--token-background-color-tags-pristine);
   padding: 0;
 }
