--- a/src/components/tag/tag.mod.css
+++ b/src/components/tag/tag.mod.css
@@ -4,8 +4,11 @@
 /* Base */
 
 .contentWrapper {
+  display: flex;
+  align-items: center;
+  height: var(--token-size-height-tags);
   border-radius: var(--token-border-radius-tags);
-  padding: var(--spacing-4) var(--spacing-8);
+  padding: 0 var(--spacing-8);
   cursor: default;
   font-family: inherit;
   white-space: normal;
