fix(tag): renames tokens index from plural to singular

--- a/materials/tokens/backgrounds.mod.css
+++ b/materials/tokens/backgrounds.mod.css
@@ -11,7 +11,7 @@
     * • Inputs
     *  ◦ Text fields
     *   ▪ Background Colors
-    * • Tags
+    * • Tag
     *  ◦ Background Colors
     */
 
