--- a/materials/tokens/borders.mod.css
+++ b/materials/tokens/borders.mod.css
@@ -13,7 +13,7 @@
     *  ◦ Text fields
     *   ▪ Border Colors
     *   ▪ Border Radius
-    * • Tags
+    * • Tag
     *  ◦ Border Colors
     *  ◦ Border Radius
     * • Separator
