--- a/materials/tokens/shadows.mod.css
+++ b/materials/tokens/shadows.mod.css
@@ -9,7 +9,7 @@
     * Do not use these for border colors or background colors.
     *
     * Index
-    * • Tags
+    * • Tag
     *  ◦ Shadows Box
     */
 
