fix: target icon theme with css and remove svg transform

--- a/src/components/icons/icons.mod.css
+++ b/src/components/icons/icons.mod.css
@@ -1,34 +1,34 @@
 @import '../../../materials/colors/base-colors.mod.css';
 
-.theme-black {
+.theme-black path {
   fill: var(--color-black);
 }
 
-.theme-grey {
+.theme-grey path {
   fill: var(--color-gray-60);
 }
 
-.theme-white {
+.theme-white path {
   fill: var(--color-white);
 }
 
-.theme-blue {
+.theme-blue path {
   fill: var(--color-blue);
 }
 
-.theme-green {
+.theme-green path {
   fill: var(--color-green);
 }
 
-.theme-green-light {
+.theme-green-light path {
   fill: var(--color-green-40);
 }
 
-.theme-orange {
+.theme-orange path {
   fill: var(--color-orange);
 }
 
-.theme-red {
+.theme-red path {
   fill: var(--color-red);
 }
 
